<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.ActivityFragment">

    <com.dinuscxj.progressbar.CircleProgressBar
        android:id="@+id/cpBPMLevel"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_very_large"
        app:line_count="30"
        app:line_width="4dp"
        app:progress_background_color="@color/colorGrey"
        app:progress_end_color="@color/colorAccent"
        app:progress_shader="sweep"
        app:progress_start_color="@color/colorAccent"
        app:progress_stroke_cap="round"
        app:progress_stroke_width="4dp"
        app:progress_style="solid_line"
        app:progress_text_color="@color/colorBlack"
        app:progress_text_size="40sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFinger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cpBPMLevel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_normal"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/label_finger"
        android:textColor="@color/colorGrey"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFinger"
        android:layout_marginStart="@dimen/margin_jumbo"
        android:layout_marginTop="@dimen/margin_big"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/label_min"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/label_dymanic_bpm_min"
                    android:textColor="@color/colorRed"
                    android:textSize="33sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/label_bpm"
                    android:textColor="@color/colorRed"
                    android:textSize="20sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/label_max"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/label_dymanic_bpm_max"
                    android:textColor="@color/colorGreen"
                    android:textSize="33sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/label_bpm"
                    android:textColor="@color/colorGreen"
                    android:textSize="20sp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>